--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "massive": "^4.4.0",
+    "massive": "^4.6.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "session": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
